--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "highlight.js": "^9.16.2",
     "react": "^16.10.2",
     "react-animated-slider": "^1.1.4",
     "react-dom": "^16.10.2",
