Restyled and added content

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@kunukn/react-collapse": "^2.2.8",
     "highlight.js": "^9.16.2",
     "mdbreact": "^4.25.3",
+    "node-sass": "^4.13.1",
     "react": "^16.10.2",
     "react-animated-slider": "^1.1.4",
     "react-dom": "^16.10.2",
