--- a/package.json
+++ b/package.json
@@ -4,15 +4,22 @@
   "private": true,
   "dependencies": {
     "@kunukn/react-collapse": "^2.2.8",
+    "@material-ui/core": "^4.9.7",
+    "@material-ui/icons": "^4.9.1",
+    "@material-ui/lab": "^4.0.0-alpha.46",
     "highlight.js": "^9.16.2",
-    "mdbreact": "^4.25.3",
+    "mdbreact": "^4.25.4",
     "node-sass": "^4.13.1",
+    "notistack": "^0.9.9",
     "react": "^16.10.2",
     "react-animated-slider": "^1.1.4",
     "react-dom": "^16.10.2",
+    "react-horizontal-timeline": "^1.5.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "react-swipeable-views": "^0.13.9",
     "react-vertical-timeline-component": "^2.5.0",
+    "react-web-tabs": "^1.0.1",
     "router": "^1.3.3"
   },
   "scripts": {
