updated image showcase

--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
     "notistack": "^0.9.9",
     "react": "^16.13.1",
     "react-animated-slider": "^1.1.4",
+    "react-bnb-gallery": "^1.1.9",
+    "react-bootstrap-carousel": "^4.0.4",
     "react-dom": "^16.13.1",
     "react-horizontal-timeline": "^1.5.3",
+    "react-image-gallery": "^1.0.7",
+    "react-image-lightbox": "^5.1.1",
+    "react-lightbox-component": "^1.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-swipeable-views": "^0.13.9",
