--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
     "@material-ui/core": "^4.9.9",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.48",
+    "apexcharts": "^3.19.2",
     "highlight.js": "^9.18.1",
     "mdbreact": "^4.25.5",
-    "node-sass": "^4.13.1",
+    "node-sass": "^4.14.1",
     "notistack": "^0.9.9",
     "react": "^16.13.1",
     "react-animated-slider": "^1.1.4",
+    "react-apexcharts": "^1.3.7",
     "react-bnb-gallery": "^1.1.9",
     "react-bootstrap-carousel": "^4.0.4",
     "react-dom": "^16.13.1",
@@ -20,6 +22,7 @@
     "react-image-gallery": "^1.0.7",
     "react-image-lightbox": "^5.1.1",
     "react-lightbox-component": "^1.2.1",
+    "react-recaptcha-google": "^1.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
     "react-swipeable-views": "^0.13.9",
